--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="title_back_textcolor">#fb624a</color>
+    <color name="line">#e7e7e7</color>
+    <color name="white">#ffffff</color>
 </resources>
