--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,34 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <include layout="@layout/title_bar" />
 
     <EditText
         android:id="@+id/mobile"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="22dp"
-        android:paddingLeft="13dp"
-        android:paddingRight="0dp"
+        style="@style/edittext_linput"
         android:layout_width="match_parent"
-        android:background="@drawable/background_activity_communication_edittext"
-        android:hint="@string/input_mobile"
-        android:textSize="14sp"
-        android:layout_height="@dimen/login_button_height" />
-
-    <EditText
-        android:background="@drawable/background_activity_communication_edittext"
-        android:id="@+id/code"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="22dp"
-        android:paddingLeft="13dp"
-        android:layout_width="195dp"
-        android:hint="@string/code"
-        android:textSize="14sp"
-        android:layout_height="@dimen/login_button_height" />
+        android:hint="@string/input_mobile"
+        android:maxLength="11" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="22dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/code"
+            style="@style/edittext_linput"
+            android:layout_width="0dp"
+            android:layout_weight="195"
+            android:hint="@string/code" />
+
+        <Button
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:layout_width="0dp"
+            android:layout_height="46dp"
+            android:layout_marginLeft="12dp"
+            android:layout_weight="128"
+            android:background="@drawable/small_button"
+            android:text="@string/send_code" />
+    </LinearLayout>
+
+    <Button
+        android:textSize="17sp"
+        android:textColor="@color/white"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:text="@string/sutmit" />
+
+    <TextView
+        android:text="如需帮助，请致电010-5768421"
+        android:layout_marginTop="12dp"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="12dp"
+        android:textColor="@color/text_des"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
