--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -8,8 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/login"
-        android:textColor="@color/color_ffffff"
+        android:text="@string/login_in"
+        android:textColor="@color/white"
         android:textSize="17sp" />
 
 </RelativeLayout>
