--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,5 +4,8 @@
     <color name="line">#e7e7e7</color>
     <color name="white">#ffffff</color>
     <color name="title_back_bgcolor">#E61600</color>
-    <color name="color_ffffff">#ffffff</color>
+    <color name="text_hit">#D2D2D2</color>
+    <color name="text_des">#5A5A5A</color>
+
+
 </resources>
