--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,16 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="edittext_linput">
+        <item name="android:inputType">number</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingLeft">13dp</item>
+        <item name="android:paddingRight">13dp</item>
+        <item name="android:layout_height">46dp</item>
+        <item name="android:textColorHint">@color/text_hit</item>
+        <item name="android:background">@drawable/background_activity_communication_edittext</item>
+    </style>
+
+
 </resources>
