--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
         android:layout_marginTop="12dp"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:textColor="@color/text_des"
         android:layout_height="wrap_content" />
 
