--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F0EFF4"
+    android:background="@color/act_bg"
     android:orientation="vertical">
 
     <include
@@ -56,7 +56,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_login_info"
-        android:background="@color/white"
         app:imgRes="@mipmap/me_check"
         app:txtName="我的审核" />
 
@@ -65,7 +64,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fragment_me_check"
-        android:background="@color/white"
         app:imgRes="@mipmap/me_mod"
         app:txtName="修改信息" />
 
@@ -74,7 +72,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fragment_me_up"
-        android:background="@color/white"
         app:imgRes="@mipmap/me_aboutus"
         app:showLine="false"
         app:txtName="关于我们" />
