--- a/app/src/main/res/layout/ui_add_info.xml
+++ b/app/src/main/res/layout/ui_add_info.xml
@@ -2,42 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@color/white"
-    android:layout_height="53dp">
+    android:layout_height="46dp">
 
-    <ImageView
-        android:id="@+id/img_left"
+    <TextView
+        android:id="@+id/title"
+        android:paddingLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:paddingLeft="16dp"
-        android:src="@mipmap/me_check" />
+        android:text="员工姓名"
+        android:textColor="#272727"
+        android:textSize="17sp" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="9dp"
-        android:layout_toRightOf="@+id/img_left"
-        android:text="我的审核"
-        android:textColor="#464646"
-        android:textSize="14sp" />
+        android:text=""
+        android:layout_marginRight="12dp"
+        android:layout_toLeftOf="@+id/img_go"
+        android:textColor="#737373"
+        android:textSize="17sp" />
 
     <ImageView
-        android:id="@+id/img_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/img_go"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:paddingRight="26dp"
-        android:src="@mipmap/fanhui" />
+        android:src="@mipmap/fanhui"
+        android:paddingRight="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="13dp"
         android:background="#D2D2D2" />
 </RelativeLayout>
