--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -9,7 +9,7 @@
     <color name="button_bg">#E60012</color>
     <color name="act_bg">#F0EFF4</color>
 
-
     <color name="split_line">#f8f8f8</color>
-
+    <drawable name="pressed_bg">#dedede</drawable>
+    <drawable name="nopressed_bg">#fff</drawable>
 </resources>
