--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -50,5 +50,13 @@
         android:textColor="#737373"
         android:textSize="11sp" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:paddingRight="23dp"
+        android:src="@mipmap/fanhui" />
+
 
 </RelativeLayout>
