--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,7 @@
             android:paddingTop="7dp"
             android:text="首页"
             android:textColor="@drawable/home_tab_text_color"
-            android:textSize="11dp"/>
+            android:textSize="11sp"/>
 
         <RadioButton
             android:id="@+id/activity_home_progress_rbt"
@@ -39,7 +39,7 @@
             android:paddingTop="7dp"
             android:text="进度"
             android:textColor="@drawable/home_tab_text_color"
-            android:textSize="11dp"/>
+            android:textSize="11sp"/>
 
         <RadioButton
             android:id="@+id/activity_home_entering_rbt"
@@ -53,7 +53,7 @@
             android:paddingTop="7dp"
             android:text="录入"
             android:textColor="@drawable/home_tab_text_color"
-            android:textSize="11dp"/>
+            android:textSize="11sp"/>
 
         <RadioButton
             android:id="@+id/activity_home_me_rbt"
@@ -67,7 +67,7 @@
             android:paddingTop="7dp"
             android:text="我的"
             android:textColor="@drawable/home_tab_text_color"
-            android:textSize="11dp"/>
+            android:textSize="11sp"/>
 
     </RadioGroup>
 
