--- a/app/src/main/res/layout/activity_info_list.xml
+++ b/app/src/main/res/layout/activity_info_list.xml
@@ -33,7 +33,7 @@
             android:paddingLeft="17dp"
             android:paddingTop="12dp"
             android:text="我的员工"
-            android:textSize="12dp"/>
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/fragment_home_success_more"
@@ -46,7 +46,7 @@
             android:paddingRight="12dp"
             android:paddingTop="12dp"
             android:text=""
-            android:textSize="12dp"/>
+            android:textSize="12sp"/>
     </RelativeLayout>
 
     <ListView
