--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,7 +60,7 @@
                     android:paddingTop="17dp"
                     android:text="利息低"
                     android:textColor="#494949"
-                    android:textSize="13dp"/>
+                    android:textSize="13sp"/>
 
                 <TextView
                     android:id="@+id/fragment_home_loan_tv"
@@ -75,7 +75,7 @@
                     android:paddingTop="17dp"
                     android:text="放款快"
                     android:textColor="#494949"
-                    android:textSize="13dp"/>
+                    android:textSize="13sp"/>
 
                 <TextView
                     android:id="@+id/fragment_home_limit_tv"
@@ -90,7 +90,7 @@
                     android:paddingTop="17dp"
                     android:text="额度高"
                     android:textColor="#494949"
-                    android:textSize="13dp"/>
+                    android:textSize="13sp"/>
 
                 <TextView
                     android:id="@+id/fragment_home_add_entering_tv"
@@ -105,7 +105,7 @@
                     android:paddingTop="17dp"
                     android:text="添加录入"
                     android:textColor="@color/title_back_bgcolor"
-                    android:textSize="13dp"/>
+                    android:textSize="13sp"/>
             </LinearLayout>
 
             <View
@@ -143,7 +143,7 @@
                     android:paddingLeft="17dp"
                     android:paddingTop="12dp"
                     android:text="成功案例"
-                    android:textSize="12dp"/>
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/fragment_home_success_more"
@@ -156,7 +156,7 @@
                     android:paddingRight="12dp"
                     android:paddingTop="12dp"
                     android:text="更多"
-                    android:textSize="12dp"/>
+                    android:textSize="12sp"/>
 
             </RelativeLayout>
 
