--- a/app/src/main/res/layout/item_success_example.xml
+++ b/app/src/main/res/layout/item_success_example.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="1dp"
         android:text="申请时间:2015-12-1 15:30"
         android:textColor="#737373"
-        android:textSize="11dp"/>
+        android:textSize="11sp"/>
 
     <ImageView
         android:layout_width="wrap_content"
