--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,5 +30,15 @@
         <item name="android:background">@drawable/background_activity_communication_edittext</item>
     </style>
 
+    <style name="fragment_progress_tab">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:paddingBottom">15dp</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:textColor">@drawable/progress_tab_text</item>
+        <item name="android:textSize">15sp</item>
+    </style>
 
 </resources>
