--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,41 +7,16 @@
 
     <include layout="@layout/title_bar" />
 
-    <EditText
-        android:id="@+id/mobile"
+    <cn.fpower.financeservice.view.widget.ClearEditText
+        android:id="@+id/view_mobile"
         style="@style/edittext_linput"
         android:layout_width="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="22dp"
+        android:inputType="number"
         android:hint="@string/input_mobile"
         android:maxLength="11" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="22dp"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/code"
-            style="@style/edittext_linput"
-            android:layout_width="0dp"
-            android:layout_weight="195"
-            android:hint="@string/code" />
-
-        <Button
-            android:textSize="14sp"
-            android:textColor="@color/white"
-            android:layout_width="0dp"
-            android:layout_height="46dp"
-            android:layout_marginLeft="12dp"
-            android:layout_weight="128"
-            android:background="@drawable/s_round_group_red"
-            android:text="@string/send_code" />
-    </LinearLayout>
 
     <Button
         android:background="@drawable/s_round_group_red"
@@ -49,12 +24,14 @@
         android:textColor="@color/white"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="22dp"
         android:layout_width="match_parent"
         android:layout_height="46dp"
-        android:text="@string/sutmit" />
+        android:text="@string/login_in"
+        android:id="@+id/loginin" />
 
     <TextView
+        android:id="@+id/des"
         android:text="如需帮助，请致电010-5768421"
         android:layout_marginTop="12dp"
         android:layout_width="wrap_content"
