--- a/app/src/main/res/layout/activity_userinfo.xml
+++ b/app/src/main/res/layout/activity_userinfo.xml
@@ -66,7 +66,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/s_round_group_red"
-        android:text="@string/sutmit"
+        android:text="@string/submit"
         android:textColor="@color/white"
         android:textSize="17sp" />
 </RelativeLayout>
