--- a/app/src/main/res/layout/activity_promotion_result.xml
+++ b/app/src/main/res/layout/activity_promotion_result.xml
@@ -21,37 +21,30 @@
             android:layout_marginTop="20dp"
             android:background="@color/white"
             android:paddingBottom="16dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:paddingTop="16dp">
 
-            <ImageView
-                android:id="@+id/img_login"
-                android:layout_width="62dp"
-                android:layout_height="62dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:src="@mipmap/me_check" />
-
             <TextView
-                android:id="@+id/txt_content"
+                android:id="@+id/des"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
-                android:layout_toRightOf="@+id/img_login"
-                android:text="设置头像"
-                android:textColor="#959595"
+                android:text="店铺照片"
+                android:layout_toLeftOf="@+id/img_go"
+                android:textColor="#272727"
                 android:textSize="14sp" />
 
-            <ImageView
-                android:id="@+id/img_right"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:layout_width="wrap_content"
+            <GridView
+                android:layout_marginTop="12dp"
+                android:layout_below="@+id/des"
+                android:id="@+id/noScrollgridview"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:paddingRight="23dp"
-                android:src="@mipmap/fanhui" />
+                android:horizontalSpacing="12dp"
+                android:numColumns="4"
+                android:scrollbars="none"
+                android:verticalSpacing="5dp"></GridView>
+
         </RelativeLayout>
 
         <cn.fpower.financeservice.view.widget.EnteringSettingView
