添加店铺照片

--- a/app/src/main/res/layout/item_imageview.xml
+++ b/app/src/main/res/layout/item_imageview.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content" >
     <ImageView
         android:id="@+id/item_grida_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:scaleType="centerCrop" />
 </cn.fpower.financeservice.view.widget.SquareLayout>
