普通员工录入

--- a/app/src/main/res/layout/fragment_entering.xml
+++ b/app/src/main/res/layout/fragment_entering.xml
@@ -59,6 +59,7 @@
         app:txtName="渠道"/>
 
     <Button
+        android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:layout_below="@+id/info_qudao"
