--- a/app/src/main/res/layout/item_success_example.xml
+++ b/app/src/main/res/layout/item_success_example.xml
@@ -8,7 +8,6 @@
         android:id="@+id/item_success_example_avatar"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="12dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="12dp"
@@ -43,6 +42,7 @@
         android:layout_alignLeft="@id/item_success_example_money"
         android:layout_below="@id/item_success_example_money"
         android:layout_marginTop="1dp"
+        android:paddingBottom="12dp"
         android:text="申请时间:2015-12-1 15:30"
         android:textColor="#737373"
         android:textSize="11sp"/>
